--- a/backend/package.json
+++ b/backend/package.json
@@ -16,11 +16,12 @@
     "@prisma/client": "^6.15.0",
     "bcryptjs": "^3.0.2",
     "chalk": "^5.6.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.18.0",
+    "mongoose": "^8.18.1",
     "ora": "^9.0.0",
     "prompt-sync": "^4.2.0"
   },
