--- a/backend/package.json
+++ b/backend/package.json
@@ -20,10 +20,12 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
     "ora": "^9.0.0",
-    "prompt-sync": "^4.2.0"
+    "prompt-sync": "^4.2.0",
+    "rate-limiter": "^0.2.0"
   },
   "devDependencies": {
     "prisma": "^6.15.0"
